# automate-platform

./: README.md
ai-extension/: background.js  manifest.json
backend/: actions.py  ai.py  main.py  pyproject.toml  run.py  token_storage.py
frontend/: package.json  pnpm-lock.yaml  test.py
frontend/src/: env.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/page-parts/: chat-page.tsx  connect-page.tsx
frontend/src/pages/: chat-page.tsx  connect-page.tsx
