[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Suryansh2002 <suryanshwins2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.128.0"}
playwright-stealth = "^2.0.1"
aiohttp = "^3.13.3"
openai = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
